<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.planetaccounting.saleAgent.shpenzimet.ShpenzimetActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="#0288D1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:gravity="center"
                    android:text="@string/shpenzimi"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <AutoCompleteTextView
                        android:id="@+id/furnitori_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_marginTop="5dp"
                        android:hint="@string/furnitori"
                        android:imeOptions="actionDone"
                        android:background="@drawable/edit_field_corner"


                        android:nextFocusDown="@id/tipi_edittext" />

                    <TextView
                        android:id="@+id/data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_marginTop="5dp"
                        android:textSize="18dp"
                        android:hint="@string/data"
                        android:singleLine="true"
                        android:background="@drawable/edit_field_corner"

                        android:nextFocusDown="@id/nr_fatures" />
                    <AutoCompleteTextView
                        android:id="@+id/tipi_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_marginTop="5dp"
                        android:hint="@string/tipi"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:background="@drawable/edit_field_corner"



                        android:nextFocusDown="@id/nr_fatures" />

                    <EditText
                        android:id="@+id/nr_fatures"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_marginTop="5dp"
                        android:hint="@string/nr_fatures"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:background="@drawable/edit_field_corner"



                        android:nextFocusDown="@id/shuma_editText"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/shuma_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_marginTop="5dp"
                        android:digits="0123456789."
                        android:imeOptions="actionDone"

                        android:hint="@string/shuma"
                        android:singleLine="true"
                        android:background="@drawable/edit_field_corner"


                        android:inputType="numberDecimal"
                        android:nextFocusDown="@id/comment_edittext"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/comment_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:maxHeight="150dp"
                        android:layout_marginTop="5dp"
                        android:imeOptions="actionDone"
                        android:background="@drawable/edit_field_corner"


                        android:hint="@string/komenti"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/buttonInkaso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/btn_proceso"
                        android:textColor="@android:color/white"
                        android:background="@drawable/button_rounder_corner"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>
