<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="19dp"
                android:text="@string/targeti_per_artikuj"
                android:textAllCaps="true"
                android:textColor="#000" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#666"
                    android:orientation="horizontal"
                    android:padding="10dp"

                    android:visibility="gone">

                    <TextView
                        android:id="@+id/targeti_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/targeti_10"
                        android:textColor="#fff"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#fff" />

                    <TextView
                        android:id="@+id/realizimi_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/realizimi_10"
                        android:textColor="#fff"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#fff" />

                    <TextView
                        android:id="@+id/perqindja_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/perqindje_10"
                        android:textColor="#fff"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#fff" />

                    <TextView
                        android:id="@+id/perfitimi_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/perfitimi_10"
                        android:textColor="#fff"
                        android:textSize="16dp" />
                </LinearLayout>


                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart_one"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart_two"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/nr_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/nr"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="#000"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#000" />
                    <TextView
                        android:id="@+id/brand_tag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/brendi"
                        android:textColor="#000"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#000" />
                    <TextView
                        android:id="@+id/target_tag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/targeti"
                        android:textColor="#000"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#000" />

                    <TextView
                        android:id="@+id/realizim_tag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/realizimi"
                        android:textColor="#000"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#000" />

                    <TextView
                        android:id="@+id/perqindje_tag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/perqindja"
                        android:textColor="#000"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#000" />

                    <TextView
                        android:id="@+id/benefit_tag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/benefiti"
                        android:textColor="#000"
                        android:textSize="16dp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

                <LinearLayout
                    android:id="@+id/brand_holder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </LinearLayout>


        </ScrollView>
    </LinearLayout>

</layout>